--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <i class="fas fa-hand-point-up"></i>
             </div>
             <div class="exercise-details">
-              <h3>Push-ups</h3>
+              <h3>Push up</h3>
               <p>Chest & triceps</p>
               <div class="exercise-meta">
                 <span><i class="fas fa-fire"></i> 0.7 cal/rep</span>
@@ -105,18 +105,6 @@
             </div>
           </div>
 
-          <div class="exercise-card" data-exercise="jumpingjack">
-            <div class="exercise-icon">
-              <i class="fas fa-star"></i>
-            </div>
-            <div class="exercise-details">
-              <h3>Jumping Jacks</h3>
-              <p>Full body cardio</p>
-              <div class="exercise-meta">
-                <span><i class="fas fa-fire"></i> 0.9 cal/rep</span>
-              </div>
-            </div>
-          </div>
         </div>
       </aside>
 
